--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <a href="about.html"><button type="button">About</button></a>
             </div>  
           </div>
-          <div class="fourth">GET RECEPIES</div>
+          <div class="fourth">GET RECIPES</div>
        
           <div class="six">
             <a href="day1.html"><img src="chilli panner.jpeg" alt="Top Image" class="top-image1" height="400" width="1500"></a>
