--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <a href="about.html"><button type="button">About</button></a>
             </div>  
           </div>
-          <div class="fourth">GET RECEPIES</div>
+          <div class="fourth">GET RECIPES</div>
        
           <div class="six">
             <div id="toprecipe">
