--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
             <div class="second">Yummy</div>
             <div class="third">
                 <a href="index.html"><button type="button">Home</button></a>
-                <a href="contact.html"><button type="button">Contact us</button></a>
+                <a href="contact.html"><button type="button">Contact</button></a>
                 <a href="about.html"><button type="button">About</button></a>
+                <a href="day4.html"><button type="button">Play</button></a>
             </div>  
           </div>
           <div class="fourth">GET RECIPES</div>
