--- a/day4.html
+++ b/day4.html
@@ -50,7 +50,7 @@
 <body>
 <div class="container">
     <div class="main">
-        <h1 id="heading">Play With Guess </h1>
+        <h1 id="heading">Play With Guess(1-100) </h1>
 
  <div id="submain">
 
