--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
               
 
               </div>
-              <div id="copy">&#169; All rights reserved.</div>
-
+            <div id="copy"><pre>&#169; All rights reserved <br> Made by MK&#128513;</div>
             </div>
           </footer>
 </body>
